--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^5.1.6",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
 }
